adiciona excecao do eslint para o middleware de error

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Lemon-PS",
+  "name": "lemon-ps",
   "version": "1.0.0",
   "description": "Processo seletivo Lemon",
   "main": "index.js",
